--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -31,5 +31,8 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add events.json
-          git commit -m "Update events" || echo "No changes"
+          git diff-index --quiet HEAD || git commit -m "Update events"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
