--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,8 +1,9 @@
 name: Check for new events
 
+# هر 6 ساعت اجرا میشه
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,29 +11,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # دریافت فایل‌های ریپازیتوری
       - uses: actions/checkout@v3
 
+      # نصب Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
+      # نصب کتابخانه‌ها
       - name: Install dependencies
         run: pip install requests beautifulsoup4
 
-      - name: Run script
+      # اجرای script Python
+      - name: Run monitor script
         env:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
         run: python monitor.py
 
+      # commit و push امن تغییرات events.json
       - name: Commit updated events
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add events.json
           git diff-index --quiet HEAD || git commit -m "Update events"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
