--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,6 +1,5 @@
 name: Check for new events
 
-# هر 6 ساعت اجرا میشه
 on:
   schedule:
     - cron: "0 */6 * * *"
@@ -11,31 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # دریافت فایل‌های ریپازیتوری
       - uses: actions/checkout@v3
 
-      # نصب Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      # نصب کتابخانه‌ها
       - name: Install dependencies
         run: pip install requests beautifulsoup4
 
-      # اجرای script Python
       - name: Run monitor script
         env:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
         run: python monitor.py
 
-      # commit و push امن تغییرات events.json
+      # Commit & push امن با Action آماده
       - name: Commit updated events
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add events.json
-          git diff-index --quiet HEAD || git commit -m "Update events"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update events
+          file_pattern: events.json
+          branch: main
+          push: true
